// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 164,
  "gasUsed": 51216,
=======
  "calldataByteLength": 196,
  "gasUsed": 51502,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #increaseObservationCardinalityNext no op 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 164,
  "gasUsed": 26147,
=======
  "calldataByteLength": 196,
  "gasUsed": 26433,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint above current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint above current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 262365,
=======
  "calldataByteLength": 260,
  "gasUsed": 282200,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint above current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 240988,
=======
  "calldataByteLength": 260,
  "gasUsed": 261863,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint around current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 233693,
=======
  "calldataByteLength": 260,
  "gasUsed": 254568,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint around current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 385908,
=======
  "calldataByteLength": 260,
  "gasUsed": 406784,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint around current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 233693,
=======
  "calldataByteLength": 260,
  "gasUsed": 254568,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint below current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint below current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 330268,
=======
  "calldataByteLength": 260,
  "gasUsed": 347730,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #mint below current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
}
`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick above 1`] = `34580`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick below 1`] = `34530`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick inside 1`] = `39810`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 216747,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick above 1`] = `34874`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick below 1`] = `34833`;

exports[`PoolManager gas tests fee is off #snapshotCumulativesInside tick inside 1`] = `40113`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 237683,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 203952,
=======
  "calldataByteLength": 260,
  "gasUsed": 224888,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 240953,
=======
  "calldataByteLength": 260,
  "gasUsed": 261880,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 295988,
=======
  "calldataByteLength": 260,
  "gasUsed": 316924,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 228794,
=======
  "calldataByteLength": 260,
  "gasUsed": 249731,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 295988,
=======
  "calldataByteLength": 260,
  "gasUsed": 316924,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 295988,
=======
  "calldataByteLength": 260,
  "gasUsed": 316924,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 216747,
=======
  "calldataByteLength": 260,
  "gasUsed": 237683,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 204040,
=======
  "calldataByteLength": 260,
  "gasUsed": 224976,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 230090,
=======
  "calldataByteLength": 260,
  "gasUsed": 251016,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is off #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 285098,
=======
  "calldataByteLength": 260,
  "gasUsed": 306035,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext grow by 1 slot 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 164,
  "gasUsed": 51216,
=======
  "calldataByteLength": 196,
  "gasUsed": 51502,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #increaseObservationCardinalityNext no op 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 164,
  "gasUsed": 26147,
=======
  "calldataByteLength": 196,
  "gasUsed": 26433,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint above current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint above current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 262365,
=======
  "calldataByteLength": 260,
  "gasUsed": 282200,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint above current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 167391,
=======
  "calldataByteLength": 260,
  "gasUsed": 187226,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 240988,
=======
  "calldataByteLength": 260,
  "gasUsed": 261863,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint around current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 233693,
=======
  "calldataByteLength": 260,
  "gasUsed": 254568,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint around current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 385908,
=======
  "calldataByteLength": 260,
  "gasUsed": 406784,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint around current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 233693,
=======
  "calldataByteLength": 260,
  "gasUsed": 254568,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint below current price add to position existing 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint below current price new position mint first in range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 330268,
=======
  "calldataByteLength": 260,
  "gasUsed": 347730,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #mint below current price second position in same range 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 168068,
}
`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick above 1`] = `34580`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick below 1`] = `34530`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick inside 1`] = `39810`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 221061,
=======
  "calldataByteLength": 260,
  "gasUsed": 187903,
}
`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick above 1`] = `34874`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick below 1`] = `34833`;

exports[`PoolManager gas tests fee is on #snapshotCumulativesInside tick inside 1`] = `40113`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 241988,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 208148,
=======
  "calldataByteLength": 260,
  "gasUsed": 229075,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 245385,
=======
  "calldataByteLength": 260,
  "gasUsed": 266302,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 300772,
=======
  "calldataByteLength": 260,
  "gasUsed": 321700,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 233344,
=======
  "calldataByteLength": 260,
  "gasUsed": 254271,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 300772,
=======
  "calldataByteLength": 260,
  "gasUsed": 321700,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 large swap crossing several initialized ticks second time after some time passes 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 300772,
=======
  "calldataByteLength": 260,
  "gasUsed": 321700,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 221061,
=======
  "calldataByteLength": 260,
  "gasUsed": 241988,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 208237,
=======
  "calldataByteLength": 260,
  "gasUsed": 229164,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 234404,
=======
  "calldataByteLength": 260,
  "gasUsed": 255321,
>>>>>>> origin/main
}
`;

exports[`PoolManager gas tests fee is on #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
<<<<<<< HEAD
  "calldataByteLength": 228,
  "gasUsed": 289765,
=======
  "calldataByteLength": 260,
  "gasUsed": 310692,
>>>>>>> origin/main
}
`;
